- Button to workflow, fixed a style (margin-top resulted to misalign buttons) and removed labels (resulted redundant, better to remove them)

--- a/Laser.Sources/Laser.Orchard/Themes/KrakeAdmin/Styles/krake.css
+++ b/Laser.Sources/Laser.Orchard/Themes/KrakeAdmin/Styles/krake.css
@@ -1279,7 +1279,6 @@ fieldset {
 
 .custom-button {
     clear: right;
-    margin-top: 20px;
 }
 
 .widgets-listed .widgets-zone-widgets h3 a,
